# pose-estimation-cs298

./: Makefile  README.md  pyproject.toml  run.sh
binary/: violence_detection_model_v0.1.0.pt  violence_detection_model_v0.2.0.pt
diagrams/: model.mermaid  timeline.mermaid
src/: __init__.py  gnn.py  grnn.py  inference.py  model.py  train.py  transformer.py  visualization.py
