[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violence-detection"
version = "0.1.0"
description = "Violence detection from pose data using Graph Neural Networks"
authors = [
    {name = "Marc Reyes", email = "marc.reyes@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.10.0",
    "torch-geometric>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.60.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/violence-detection"
"Bug Reports" = "https://github.com/yourusername/violence-detection/issues"
"Source" = "https://github.com/yourusername/violence-detection"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["violence_detection"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "mmpose",
]

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=violence_detection --cov-report=term-missing"
testpaths = ["tests"]
